<resources>
    <string name="app_name">Alcool ou Gasolina</string>
    <string name="result">Resultado</string>
    <string name="calcular">Calcular</string>
    <string name="gaso">Gasolina</string>
    <string name="info_gaso">Preço gasolina ex: 2.60</string>
    <string name="alcool">Álcool</string>
    <string name="info_alcool">Preço álcool ex: 1.90</string>
    <string name="info">Saiba a melhor opção de abastecimento do seu carro!</string>
    <string name="todo">TODO</string>
</resources>